Fixed layout issues

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,6 +4,8 @@
 .site-header {
   // border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
+  padding-top: 10px;
+  padding-bottom: 10px;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
@@ -35,10 +37,21 @@
   }
 }
 
+.contact_info_header {
+  float:right;
+  position: absolute;
+  margin:0;
+  padding:0;
+  right:0;
+}
+
 .site-nav {
   float: right;
+  position: absolute;
+  bottom:5px;
+  right:5px;
+  // right:30px;
   line-height: $base-line-height * $base-font-size * 2.25;
-
   .nav-trigger {
       display: none;
   }
@@ -149,6 +162,11 @@
   padding-left: $spacing-unit / 2;
   width: -webkit-calc(33% - (#{$spacing-unit} / 2));
   width:         calc(33% - (#{$spacing-unit} / 2));
+}
+
+
+.footer-col a.site-logo {
+  float: right;
 }
 
 .footer-col-1 {
